--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+v0.7.1
+======
+34e76fa  list all public files done. Rename files done. Public files and folders are now accessible by unregistered users.
+
+v0.7
+====
+644418c  Refactored todo page and changelog
+5c38d17  removed log files from repo
+
 v0.6
 ====
 5c1def0  Made it possible to view contents of folders on folder index page. Added more diverse icon set. Removed all folder creation from code, except main user folder.
